# can-llamas-drive

./: .gitignore  LICENSE  README.md  playground.ipynb  pyproject.toml  requirements.txt  results.ipynb
can_llamas_drive/: __main__.py  my_chat_format.py  process_videos.py  video_worker.py
